added column split and basic routing skeleton

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -30,3 +30,15 @@
     transform: rotate(360deg);
   }
 }
+
+.sidebar-container {
+  background: blue;
+  height: 100vh;
+  overflow: auto;
+}
+
+.resource-page-container {
+  background: red;
+  height: 100vh;
+  overflow: auto;
+}
