basic positioning and styling

--- a/src/components/AddItemForm/AddItemForm.scss
+++ b/src/components/AddItemForm/AddItemForm.scss
@@ -1,3 +1,20 @@
 .AddItemForm {
+  min-width: 50%;
+  position: absolute;
+  bottom: 25px;
+  right: 25px;
 
+  .item-form {
+    margin-bottom: 1em;
+  }
+
+  .plus-btn {
+    font-size: 2.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    line-height: 0;
+    border: none;
+    border-radius: 50%;
+    padding: 0;
+  }
 }
