--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,42 +1,15 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: lightgreen;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .sidebar-container {
+    height: 100vh;
+    overflow: auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  .resource-page-container {
+    height: 100vh;
+    overflow: auto;
+    padding: 2em;
   }
+
 }
 
-.sidebar-container {
-  height: 100vh;
-  overflow: auto;
-}
-
-.resource-page-container {
-  height: 100vh;
-  overflow: auto;
-}
