--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -2,6 +2,10 @@ ul{
     list-style-type: none;
 }
 
+.sidenav {
+    margin-top: 50px;
+}
+
 .custom {
     width: 70% !important;
     margin: 5px;
